# Project_gamification

./: .env  .gitignore  Dockerfile  README.md  auth.py  database.py  db.py  db_backup.sql  dependencies.py  docker-compose.yml  main.py  package-lock.json  pyproject.toml  requirements.txt  routes.py  routes_chat.py  routes_delete.py  routes_get.py  routes_post.py  routes_put.py  run.py  schemas.py  start.py  test_ollama.py  train.jsonl
config/: db.py
docs/: Locust_test_local.html  full_test_report.html
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: Navbar.jsx
frontend/src/context/: AuthContext.jsx  ThemeContext.jsx
frontend/src/pages/: AdminPage.jsx  AuthPage.jsx  HomePage.jsx  LeaderboardsPage.jsx  ManagerPage.jsx  ProfilePage.jsx
frontend/src/styles/: HomePage.module.css
locust/: locustfile.py
ml/: ai_analyzer.py  complexity_examples.txt  task_examples.txt
pytest/: FULL_REPORT_README.txt  generate_full_report.py  run_tests_with_report.py
pytests/: conftest.py  test_chat.py  test_delete.py  test_get.py  test_post.py  test_put.py  test_security.py
pytests/unit/: test_auth.py  test_validators.py
test_reports/: full_test_report.html
